--- a/app/src/main/res/layout/activity_reports.xml
+++ b/app/src/main/res/layout/activity_reports.xml
@@ -11,6 +11,8 @@
         android:layout_width="347dp"
         android:layout_height="46dp"
         android:text="Average rate of the app"
+        android:textColor="#100808"
+        android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -34,6 +36,8 @@
         android:layout_width="347dp"
         android:layout_height="46dp"
         android:text="Question 5: How would you rate the value for the price of this app? "
+        android:textColor="#0C0606"
+        android:textStyle="italic"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -57,6 +61,8 @@
         android:layout_width="347dp"
         android:layout_height="46dp"
         android:text="Question 4: How likely are you to recommend this app to a friend or colleague? "
+        android:textColor="#0C0606"
+        android:textStyle="italic"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -80,6 +86,8 @@
         android:layout_width="347dp"
         android:layout_height="46dp"
         android:text="Question 3: How well does our app meet your needs? "
+        android:textColor="#0B0505"
+        android:textStyle="italic"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -103,6 +111,8 @@
         android:layout_width="347dp"
         android:layout_height="46dp"
         android:text="Question 2: How easy to understand the information in our app?"
+        android:textColor="#0C0707"
+        android:textStyle="italic"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -126,7 +136,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="App rating report"
+        android:textColor="#009688"
         android:textSize="24sp"
+        android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -138,6 +150,8 @@
         android:layout_width="347dp"
         android:layout_height="46dp"
         android:text="Question 1: How satisfied are you with the ease of use of this app?"
+        android:textColor="#130F0F"
+        android:textStyle="italic"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
