--- a/app/src/main/res/layout/activity_rate.xml
+++ b/app/src/main/res/layout/activity_rate.xml
@@ -84,6 +84,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Rate Us"
+        android:textColor="#009688"
         android:textSize="24sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
