--- a/app/src/main/res/layout/activity_civilian_shelter_information.xml
+++ b/app/src/main/res/layout/activity_civilian_shelter_information.xml
@@ -8,14 +8,15 @@
     <TextView
         android:id="@+id/sheltername"
         android:layout_width="344dp"
-        android:layout_height="39dp"
-        android:layout_marginTop="160dp"
+        android:layout_height="40dp"
         android:text="Shelter name"
         android:textSize="19sp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.492"
+        app:layout_constraintHorizontal_bias="0.507"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/textView8"
+        app:layout_constraintVertical_bias="0.056" />
 
     <Button
         android:id="@+id/infobtn"
@@ -31,25 +32,31 @@
         android:id="@+id/infolat"
         android:layout_width="346dp"
         android:layout_height="40dp"
-        android:layout_marginTop="227dp"
         android:layout_marginEnd="32dp"
         android:layout_marginRight="32dp"
         android:text="lat number"
         android:textSize="19sp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/sheltername"
+        app:layout_constraintVertical_bias="0.032" />
 
     <TextView
         android:id="@+id/infolon"
         android:layout_width="348dp"
-        android:layout_height="48dp"
-        android:layout_marginTop="292dp"
+        android:layout_height="40dp"
         android:layout_marginEnd="30dp"
         android:layout_marginRight="30dp"
         android:text="lon number"
         android:textSize="19sp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/infolat"
+        app:layout_constraintVertical_bias="0.042" />
 
     <TextView
         android:id="@+id/textView8"
@@ -60,8 +67,23 @@
         android:layout_marginTop="36dp"
         android:text="Shelter information"
         android:textSize="27sp"
+        android:textColor="#009688"
+        android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/MoreInfo"
+        android:layout_width="347dp"
+        android:layout_height="231dp"
+        android:text="More Details ... "
+        android:textSize="21sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.531"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.82" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
