--- a/app/src/main/res/layout/activity_contant_us_admin.xml
+++ b/app/src/main/res/layout/activity_contant_us_admin.xml
@@ -6,6 +6,19 @@
     android:layout_height="match_parent"
     tools:context=".ContantUsAdminActivity">
 
+    <CheckBox
+        android:id="@+id/checkboox"
+        android:layout_width="201dp"
+        android:layout_height="35dp"
+        android:text="Treated"
+        android:textSize="20sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.671"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.905" />
+
     <TextView
         android:id="@+id/headline"
         android:layout_width="344dp"
@@ -33,19 +46,6 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.192" />
-
-    <TextView
-        android:id="@+id/Status"
-        android:layout_width="344dp"
-        android:layout_height="40sp"
-        android:text="Status"
-        android:textSize="20sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.492"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.921" />
 
     <TextView
         android:id="@+id/idshelter"
